[tool.poetry]
name = "python-testes"
version = "0.1.0"
description = ""
authors = ["SilasAlvesTi <silas.ifce.ti@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
pandas = "^1.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
